<resources>
    <string name="app_name">MusicPimp</string>
    <string name="title_home">MusicPimp</string>
    <string name="title_dashboard">Music</string>
    <string name="title_music">Music</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_player">Player</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_settings">Settings</string>
    <string name="title_endpoints">Endpoints</string>
    <string name="title_privacy">Privacy policy</string>
    <string name="title_add_endpoint">Add endpoint</string>
    <string name="title_edit_endpoint">Edit endpoint</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_popular">Popular</string>
    <string name="title_recent">Recent</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="playlist">Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="cloud_id">Cloud ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="time_zero">00:00</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="no_music">No music in this folder.</string>
    <string name="no_track">No media.</string>
    <string name="no_tracks">No tracks.</string>
    <string name="error_generic">An error occurred.</string>
    <string name="error_loading_music">Failed to load music.</string>
    <string name="playback_device">Play music on</string>
    <string name="music_source">Music source</string>
    <string name="manage_endpoints">Manage endpoints</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="start_playback_here">Start playback here</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="more">More</string>
    <string name="cover">Cover</string>
    <string name="playlist_empty">Empty playlist.</string>

    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in MusicPimp</string>

    <string name="popular_plays">%1$d plays</string>
    <string name="version">Version %1$s</string>
</resources>
